--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ header .navbar {
     z-index: 0;
 }
 
+
 header .logo img{
     height: 100px;
     width: 100px;
@@ -87,7 +88,7 @@ header ul ul li{
     position: relative;
 }
 header ul li:hover >ul{
-    display: flex!important;
+    display: block!important;
     z-index: 5;
     position: relative;
 }
@@ -162,6 +163,7 @@ header  button {
 .slide img {
     width: 100%;
     overflow: hidden;
+  
 
 }
 
@@ -327,7 +329,7 @@ border-radius: 13px;
 }
 #course .courses .details i{
     color: #FDC93B;
-    font-size: .9rem;
+    font-size: 1.0rem;
 }
 #course .courses .details span{
     color: #969696;
@@ -336,7 +338,7 @@ border-radius: 13px;
 #course .courses .cost
 {
  
-    background: linear-gradient(to right, #3a7bd5, #00d2ff);
+    background: linear-gradient(to right, #fc8378, #e18fda);
     
     color: #eeeeee;
     line-height: 70px;
@@ -350,8 +352,194 @@ border-radius: 13px;
     
 }
 
+/* -------------registration-------- */
+@media (max-width: 1024px) {
+    #register {
+       display:block;
 
+      
+    }
+    .reg-cont{
+        display: block;
+    }
+}
+#register{
+    padding: 6vw 8vw 8vw 8vw;
+ width: 100%;
+ height: 50vw;
+ display: block;
+ justify-content: space-between;
+
+
+}
+#register h2{
+    text-align: center;
+    font-size: 2rem;
+    color: rgb(249,163,28);
+    text-shadow: #060606;
+}
+.reg-cont{
+    display: flex;
+    padding: 6vw 8vw 8vw 8vw;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+}
+#register .reg-img{
+
+    width: 50%;
+    height: 450px;
     
+ 
+ 
+}
+#register .reg-img img{
+   
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+}
+.form{
+    width: 40%;
+    height: 450px;
+    
+    
+}
+#register .form{
+ 
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    text-align: center;
+
+
+}
+
+#register .form input{
+    margin: 15px 0;
+    padding: 15px 10px;
+    border: 1px solid rgb(249,163,28);
+    outline: none !important;
+}
+@media (max-width: 600px) {
+    .form {
+        width: 100%; /* Adjust for smaller screens */
+    }
+}
+#submit{
+    background-color: #1f4167;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    height: 42px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width:90px;
+}
+#submit:hover {
+    background: rgba(214, 86, 246, 0.527);
+    transform: scale(1.08);
+}
+footer{
+    padding: 8vw;
+    background-color: #1a333a;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+footer .col{
+    padding-bottom: 40px;
+}
+footer h3{
+    color: #fff;
+    font-weight: 600;
+    padding-bottom:20px ;
+}
+footer p{
+    color: #7b838a;
+}
+footer li{
+    list-style: none !important;
+    color: #7b838a;
+    padding: 10px 0;
+    font-size: 15px;
+    cursor: pointer;
+    font-weight: 400;
+    font-family: "poppins";
+    transition: 0.3s ease-in;
+
+}
+
+footer li:hover{
+    color: #fff;
+}
+footer .subs{
+    margin-top: 20px;
+
+}
+footer input{
+    width: 220px;
+    padding: 15px 12px;
+    background:#334f6c;
+    border: none;
+    outline: none;
+    color: #fff;
+}
+#bt-subs{
+    background-color:#00c2cb;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    font-weight: 600;
+    height: 42px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width:120px;
+}
+#bt-subs:hover{
+    background-color:white;
+    color: black;
+}
+
+
+
+
 
 
 
